test/files/pos/contrib_406.scala
package bug.contrib_406

object Test {
  val (a: List[Int], b) = (List(1 ,2 ,3 ), 4)
}
