test/files/neg/t750b/Test.scala
// t750
object Test extends App {
  val a = Array(1, 2, 3)
  AO.f(a)
  AO.f[Int](a)
}
